fix swatch spacing & style. closes #144

--- a/inc/woocommerce/css/variation-swatches-rtl.css
+++ b/inc/woocommerce/css/variation-swatches-rtl.css
@@ -1,1 +1,1 @@
-.variations-table .swatch-wrapper{padding:0;border:0;opacity:.5}.variations-table .swatch-wrapper .swatch-anchor{border-radius:.236em}.variations-table .swatch-wrapper.selected,.variations-table .swatch-wrapper:hover{padding:0;border:0;opacity:1}#variations_clear{display:block;margin-bottom:1em}
+.variations-table tr td{background:0 0;padding:0}.variations-table tr td.label{width:5em}.variations-table .swatch-wrapper{padding:0;border:0}.variations-table .swatch-wrapper .swatch-anchor{border-radius:.236em}.variations-table .swatch-wrapper:hover{opacity:.75}.variations-table .swatch-wrapper.selected,.variations-table .swatch-wrapper:hover{padding:0;border:0}#variations_clear{display:block;margin-bottom:1em}
